--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -19,7 +19,7 @@ header{
 .__logo-nabeju{
     width: 280px;
     display: flex;
-    justify-content: center;
+    justify-content: left;
 }
 
 /*menu nav*/
@@ -48,9 +48,9 @@ li a:hover {
     color: #EDEBEB;
     position: center;
     background-image: url("../img/macarons_de_lavanda.jpg");
-	background-size: cover;
-	background-repeat: no-repeat;
-	background-attachment: fixed; 
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed; 
 }
 .__fondo-fixed{
     width: auto;
@@ -64,8 +64,8 @@ li a:hover {
     text-align: left; 
     display: inline-block;
     width: 35%;
-    margin: 50px;
-    
+    margin-left: 150px;
+    margin-top: 100px;    
 }
 .__texto-h2{
     color: #EDEBEB;
@@ -77,67 +77,65 @@ li a:hover {
 }
 .__foto-sobre-mi{
     background-color: #8175ba;
-    width: 40%;    
+    width: 35%;    
     justify-content: end;
     float: none;
     padding: 10px;
-    margin: 25px; 
+    margin-bottom: 140px;
+    margin-top: 50px; 
+    margin-left: 120px;
     border: 2px solid #DEDCDC;
 }
 .__torta-fixed{
     background-image: url("../img/torta-lavanda.jpg");
-	background-size: cover;
-	background-repeat: no-repeat;
-	background-attachment: fixed; 
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed; 
     text-align: center;
-    font-size: 50px;
-    padding: 90px;
-    margin: 30px;
-    width: 1080px;
-    height: 250px;
+    font-size: 30px;
+    font-weight: 100;
+    padding: 60px;
+    margin: 10px;
 }
 .__cupcake-fixed{
     background-image: url("../img/cupcake-lavanda.jpg");
-	background-size: cover;
-	background-repeat: no-repeat;
-	background-attachment: fixed; 
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed; 
     text-align: center;
-    font-size: 50px;
-    padding: 90px;
-    margin: 30px;
-    width: 1080px;
-    height: 250px;
+    font-size: 30px;
+    font-weight: 100;
+    padding: 60px;
+    margin: 10px;
 }
 .__galleta-fixed{
     background-image: url("../img/Galletas-de-lavanda.jpg");
-	background-size: cover;
-	background-repeat: no-repeat;
-	background-attachment: fixed; 
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed; 
     text-align: center;
-    font-size: 50px;
-    padding: 90px;
-    margin: 30px;
-    width: 1080px;
-    height: 250px;
+    font-size: 30px;
+    font-weight: 100;
+    padding: 60px;
+    margin: 10px;
 }
 .__cake-fixed{
     background-image: url("../img/torta-lila.jpg");
-	background-size: cover;
-	background-repeat: no-repeat;
-	background-attachment: fixed; 
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed; 
     text-align: center;
-    font-size: 50px;
-    padding: 90px;
-    margin: 30px;
-    width: 1080px;
-    height: 250px;
+    font-size: 30px;
+    font-weight: 100;
+    padding: 60px;
+    margin: 10px;
     color: #EDEBEB;
 }
 
 /*cards index*/
 .__cards{
     color: #DEDCDC;
-    display: grid;
+    display: flex;
     left: 15%;
     margin: 35px;
     padding: 30px;
@@ -353,6 +351,10 @@ table{
     display: grid;
     justify-self: start;
 }
+.conteiner-formulario{
+    margin-left: 120px;
+    margin-bottom: 30px;
+}
 
 /*footer*/
 #__footer{
@@ -363,11 +365,19 @@ table{
     padding: 1em;
     text-align: center;
     top: 100%;
+    font-size: 15px;
+    text-align: right;
 }
-$container-max-widths: (
-  sm: 540px,
-  md: 720px,
-  lg: 960px,
-  xl: 1140px,
-  xxl: 1320px
-);
+@media (min-width: 400px) and (max-width: 668px){
+    #__footer{
+        font-size: 10px;
+    }
+}
+@media (min-width: 400px) and (max-width: 990px){
+    .__cards{
+        display: grid;
+    }
+}
+
+
+
